--- a/index.html
+++ b/index.html
@@ -83,19 +83,23 @@
                     <form id="formRegistrar">
                         <div class="mb-3">
                             <label for="registrarUserName" class="form-label">User Name</label>
-                            <input type="text" class="form-control" id="registrarUserName">
+                            <input type="text" class="form-control" id="registrarUserName" required>
                         </div>
                         <div class="mb-3">
                             <label for="registrarPassword" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="registrarPassword">
+                            <input type="password" class="form-control" id="registrarPassword" required>
                         </div>
                         <div class="mb-3">
                             <label for="nombre" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="nombre">
+                            <input type="text" class="form-control" id="nombre" required>
                         </div>
                         <div class="mb-3">
                             <label for="apellido" class="form-label">Apellido</label>
-                            <input type="text" class="form-control" id="apellido">
+                            <input type="text" class="form-control" id="apellido" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="mail" class="form-control" id="email" required>
                         </div>
                         <div class="mb-3">
                             <label for="departamento" class="form-label">Departamento</label>
@@ -105,50 +109,49 @@
                         </div>
                         <div class="mb-3">
                             <label for="localidad" class="form-label">Localidad</label>
-                            <input type="text" class="form-control" id="localidad">
+                            <input type="text" class="form-control" id="localidad" required>
                         </div>
                         <div class="mb-3">
                             <label for="domicilio" class="form-label">Domicilio</label>
-                            <input type="text" class="form-control" id="domicilio">
+                            <input type="text" class="form-control" id="domicilio" required>
                         </div>
                         <div class="mb-3">
                             <label for="fechaNacimiento" class="form-label">Fecha Nacimiento</label>
-                            <input type="date" class="form-control" id="fechaNacimiento">
+                            <input type="date" class="form-control" id="fechaNacimiento" required>
                         </div>
                         <div class="mb-3">
                             <label for="genero" class="form-label">Genero</label>
-                            <input type="text" class="form-control" id="genero">
-                        </div>
-                        <div class="mb-3">
-                            <label for="img" class="form-label">Perfil</label>
-                            <input type="file" class="form-control" id="img">
+                            <input type="text" class="form-control" id="genero" required>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="registrarCliente">
+                            <input class="form-check-input" type="radio" name="tipoRegistro" id="registrarCliente">
                             <label class="form-check-label" for="registrarCliente">
-                               Registar cliente
+                                Registar cliente
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="registrarProv"
+                            <input class="form-check-input" type="radio" name="tipoRegistro" id="registrarProv"
                                 checked>
                             <label class="form-check-label" for="registrarProv">
                                 Registar proveedor
                             </label>
                         </div>
-                        <div class="mb-3">
-                            <label for="servicio" class="form-label">Servicio</label>
-                            <input type="text" class="form-control" id="servicio">
+                        <div id="datosProveedor">
+                            <div class="mb-3">
+                                <label for="servicio" class="form-label">Servicio</label>
+                                <input type="text" class="form-control" id="servicio">
+                            </div>
+                            <div class="mb-3">
+                                <label for="precioHora" class="form-label">Precio</label>
+                                <input type="text" class="form-control" id="precioHora">
+                            </div>
+                            <div class="mb-3">
+                                <label for="descripcion" class="form-label">Descripcion del servicio</label>
+                                <textarea name="descripcion" class="form-control" id="descripcion"></textarea>
+
+                            </div>
                         </div>
-                        <div class="mb-3">
-                            <label for="precioHora" class="form-label">Precio</label>
-                            <input type="text" class="form-control" id="precioHora">
-                        </div>
-                        <div class="mb-3">
-                            <label for="descripcion" class="form-label">Descripcion del servicio</label>
-                            <textarea name="descripcion" class="form-control" id="descripcion"></textarea>
-                            <!-- <input type="text" class="form-control" id="descripcion"> -->
-                        </div>
+
                         <button type="submit" class="btn btn-primary">Registrar</button>
                     </form>
 
@@ -157,6 +160,7 @@
         </div>
 
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
